<resources>
    <string name="app_name">ExTree</string>
    <string name="textview">TextView</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resultTextView">0</string>
    <string name="allClear">AC</string>
    <string name="erase">⌫</string>
    <string name="exponentiation">^</string>
    <string name="addition">+</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="subtraction">-</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="multiplication">*</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="division">/</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="leftBracket">(</string>
    <string name="rightBracket">)</string>
    <string name="result">=</string>
    <string name="makeTree">🌳</string>
    <string name="firstLaunchTextPartOne">What is this application for: </string>
    <string-array name="fontSizes">
        <item>10</item>
        <item>12</item>
        <item>14</item>
        <item>18</item>
        <item>20</item>
        <item>24</item>
        <item>28</item>
        <item>30</item>
        <item>32</item>
        <item>34</item>
    </string-array>
    <string-array name="circleRadiuses">
        <item>15</item>
        <item>18</item>
        <item>21</item>
        <item>24</item>
        <item>27</item>
        <item>30</item>
        <item>33</item>
        <item>36</item>
        <item>39</item>
        <item>42</item>
    </string-array>
    <string-array name="topAndBottomOffsets">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
    </string-array>
    <string-array name="widths">
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>22</item>
        <item>24</item>
    </string-array>
    <string-array name="heights">
        <item>4</item>
        <item>8</item>
        <item>12</item>
        <item>16</item>
        <item>20</item>
        <item>24</item>
        <item>28</item>
        <item>32</item>
        <item>36</item>
        <item>40</item>
    </string-array>
    <string-array name="animationDurations">
        <item>0.5f</item>
        <item>0.75f</item>
        <item>1.0f</item>
        <item>1.25f</item>
        <item>1.5f</item>
        <item>1.75f</item>
        <item>2.0f</item>
        <item>2.5f</item>
        <item>3.0f</item>
        <item>4.0f</item>
    </string-array>
</resources>