<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorFragment">

    <LinearLayout
        android:layout_width="352dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAllClear"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_with_tint"
                android:onClick="onClickButtonCalculator"
                android:text="@string/allClear"
                android:textColor="@color/highlighted_color"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonErase"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_with_tint"
                android:onClick="onClickButtonCalculator"
                android:text="@string/erase"
                android:textColor="@color/highlighted_color"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAddition"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_with_tint"
                android:onClick="onClickButtonCalculator"
                android:text="@string/addition"
                android:textColor="@color/highlighted_color"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonExponentiation"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:background="@drawable/round_button_with_tint"
                android:onClick="onClickButtonCalculator"
                android:text="@string/exponentiation"
                android:textColor="@color/highlighted_color"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSeven"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_with_tint"
                android:onClick="onClickButtonCalculator"
                android:text="@string/seven"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonEight"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_with_tint"
                android:onClick="onClickButtonCalculator"
                android:text="@string/eight"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonNine"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_with_tint"
                android:onClick="onClickButtonCalculator"
                android:text="@string/nine"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSubtraction"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_with_tint"
                android:onClick="onClickButtonCalculator"
                android:text="@string/subtraction"
                android:textColor="@color/highlighted_color"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonFour"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_with_tint"
                android:onClick="onClickButtonCalculator"
                android:text="@string/four"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonFive"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_with_tint"
                android:onClick="onClickButtonCalculator"
                android:text="@string/five"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSix"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_with_tint"
                android:onClick="onClickButtonCalculator"
                android:text="@string/six"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonMultiplication"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_with_tint"
                android:onClick="onClickButtonCalculator"
                android:text="@string/multiplication"
                android:textColor="@color/highlighted_color"
                android:textSize="20sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonOne"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_with_tint"
                android:onClick="onClickButtonCalculator"
                android:text="@string/one"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonTwo"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_with_tint"
                android:onClick="onClickButtonCalculator"
                android:text="@string/two"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonThree"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_with_tint"
                android:onClick="onClickButtonCalculator"
                android:text="@string/three"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonDivision"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_with_tint"
                android:onClick="onClickButtonCalculator"
                android:text="@string/division"
                android:textColor="@color/highlighted_color"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonZero"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_with_tint"
                android:onClick="onClickButtonCalculator"
                android:text="@string/zero"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonDot"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_with_tint"
                android:onClick="onClickButtonCalculator"
                android:text="@string/dot"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonLeftBracket"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_with_tint"
                android:onClick="onClickButtonCalculator"
                android:text="@string/leftBracket"
                android:textColor="@color/highlighted_color"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonRightBracket"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_with_tint"
                android:onClick="onClickButtonCalculator"
                android:text="@string/rightBracket"
                android:textColor="@color/highlighted_color"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonResult"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:background="@drawable/highlighted_round_calculator_button"
                android:onClick="onClickButtonCalculator"
                android:text="@string/result"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonGenerateTree"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="42dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/highlighted_round_calculator_button"
                android:onClick="onClickButtonGenerateTreeCalculator"
                android:text="@string/makeTree"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="OnClick" />
        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarCalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/nav_top_menu" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_border"
        android:gravity="bottom|right"
        android:scrollbars="vertical"
        android:text="@string/resultTextView"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>